src/app/user-module/styles/users.component.css
.user-data-row:hover {
  background-color: #CCC;
}

table {
  margin-top: 17px;
  width: 100%;
  border-collapse: collapse;
}
/* Zebra stripes */
tr:nth-of-type(odd) {
  background: #eee;
}
th {
  background: #333;
  color: white;
  font-weight: bold;
}

td, th {
  padding: 6px;
  border: 1px solid #ccc;
  text-align: left;
}

.search-box {
  position: relative;
  width:25% ;
}

/* style icon */
.search-box .glyphicon {
  position: absolute;
  padding: 10px;
  right: 0px;
}

